--- a/views/employee/addOrEdit.hbs
+++ b/views/employee/addOrEdit.hbs
@@ -3,20 +3,27 @@
 <form action="/employee" method="POST" autocomplete="OFF">
     <div class="form-group">
         <label for="fullName">Full Name</label>
-        <input type="text" name="fullName" class="form-control" placeholder="Ful name">
+        <input type="text" name="fullName" class="form-control" placeholder="Full name" value="{{employee.fullName}}">
+        <div class="text-danger">
+            {{ employee.fullNameError }}
+        </div>
     </div>
-    <div class="form-group">
+    <div class=" form-group">
         <label for="email">Email</label>
-        <input type="email" name="fullName" class="form-control" placeholder="Email">
+        <input type="email" name="email" class="form-control" placeholder="Email" value="{{employee.email}}">
+        <div class="text-danger">
+            {{ employee.emailError }}
+        </div>
     </div>
-    <div class="form-row">
+    <div class=" form-row">
         <div class="form-group col-md-6">
             <label for="Mobile">Mobile Number</label>
-            <input type="number" name="mobile" class="form-control" placeholder="Mobile number">
+            <input type="number" name="mobile" class="form-control" placeholder="Mobile number"
+                value="{{employee.mobile}}">
         </div>
-        <div class="form-group col-md-6">
+        <div class=" form-group col-md-6">
             <label for="City">Full Name</label>
-            <input type="text" name="city" class="form-control" placeholder="City">
+            <input type="text" name="city" class="form-control" placeholder="City" value="{{employee.city}}">
         </div>
     </div>
     <div class="form-group">
