--- a/views/employee/addOrEdit.hbs
+++ b/views/employee/addOrEdit.hbs
@@ -28,5 +28,6 @@
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-info"><i class="fa fa-database"></i>Submit</button>
+        <a href="/employee/list" class="btn btn-secondary"><i class="fa fa-list-alt"></i>View all</a>
     </div>
 </form>
