--- a/views/employee/addOrEdit.hbs
+++ b/views/employee/addOrEdit.hbs
@@ -1,6 +1,7 @@
 <h3>{{viewTitle}}</h3>
 
 <form action="/employee" method="POST" autocomplete="OFF">
+    <input type="hidden" name="_id" value="{{employee._id}}">
     <div class="form-group">
         <label for="fullName">Full Name</label>
         <input type="text" name="fullName" class="form-control" placeholder="Full name" value="{{employee.fullName}}">
